--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -286,9 +286,9 @@ body{
 .project_box .project_title .project_link a{
   font-size: 1.6rem;
   border: 1px solid #fff;
-  padding: 0.4rem 2.5rem;
+  padding: 0.5rem 2.5rem;
   transition: 0.3s;
-  display: block;
+  border-radius: 5px;
 }
 
 .project_box .project_title .project_link a:hover{
@@ -319,7 +319,7 @@ body{
 #list_sec .list_title{
   width: 100%;
   font-family: "IBM Plex Mono";
-  font-size: 2rem;
+  font-size: 3rem;
   margin-bottom: 5rem;
   text-align: center;
 }
