--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -371,6 +371,74 @@ body{
   font-size: 2.4rem;
 }
 
+/* #ui_sec{
+  padding: 0 2rem;
+}
+
+#ui_sec .ui_wrap{
+  width: 100%;
+  max-width: 180rem;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  position: relative;
+}
+
+#ui_sec .ui_wrap .ui_title{
+  position: sticky;
+  top: 0;
+  padding: 30rem 0 20rem 2rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#ui_sec .ui_wrap .ui_title h2{
+  color: #fff;
+  font-size: 4.8rem;
+}
+
+#ui_sec .ui_wrap .ui_title p{
+  color: #fff;
+  font-size: 2.8rem;
+}
+
+#ui_sec .ui_wrap .ui_list{
+  width: 100%;
+  height: 100%;
+}
+
+#ui_sec .ui_wrap .ui_list .ui_box{
+  width: 100%;
+  height: 30rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+}
+
+#ui_sec .ui_wrap .ui_list .ui_box .ui_img{
+  width: 30rem;
+  height: 20rem;
+  border-radius: 1rem;
+  background-color: #111;
+  object-fit: cover;
+}
+
+#ui_sec .ui_wrap .ui_list .ui_box h3{
+  font-size: 2.8rem;
+  color: #fff;
+}
+
+#ui_sec .ui_wrap .ui_list .ui_box p{
+  font-size: 1.6rem;
+  color: #fff;
+} */
+
+
 /* contact_sec */
 #contact_sec{
   padding: 0 5rem;
@@ -414,6 +482,26 @@ body{
   font-size: 1.8rem;
   color: #fff;
 }
+
+#contact_sec .contact_title .contact_link{
+  margin-top: 10rem;
+  color: #fff;
+  font-size: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  column-gap: 2rem;
+}
+
+#contact_sec .contact_title .contact_link a{
+  display: inline-block;
+}
+
+#contact_sec .contact_title .contact_link img{
+  width: 4rem;
+  height: 4rem;
+}
+
 
 @media (max-width: 1024px){
 
