--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -573,5 +573,11 @@ body{
   
   #contact_sec .contact_title .contact_link{
     justify-content: center;
+    font-size: 2rem;
+  }
+
+  #contact_sec .contact_title .contact_link img{
+    width: 2.6rem;
+    height: 2.6rem;
   }
 }
